--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@reis/mongoose-to-json": "^3.0.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "express-jwt": "^8.4.1",
@@ -23,6 +24,7 @@
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
     "multer-savefilesorg": "^1.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.16"
   },
   "devDependencies": {
